--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="" style="text-decoration:none">Lab Tests</a>
     <a href="" style="text-decoration:none">Health Care</a>
     <a href="" style="text-decoration:none">Surgeries</a>
-    <a href="" style="text-decoration:none">Health Blogs</a>
+    <a href="Healthblog.html" style="text-decoration:none">Health Blogs</a>
     <a href="" style="text-decoration:none">PLUS</a>
     <a href="" style="text-decoration:none">Offers</a>
     <a href="" style="text-decoration:none">Value store</a>
@@ -344,15 +344,7 @@
         </a>
     </div>
   </div>
-<div id="Lastimg">
-    <img src="https://assets.pharmeasy.in/apothecary/images/downloadBanner.webp?dim=1440x0&q=100"  alt="">
-    <h1>Simplifying
-        Healthcare
-        Impacting Lives
-        Download the App for Free</h1>
-        <img width="5%" src="https://assets.pharmeasy.in/apothecary/images/googlePlay.svg?dim=256x0" alt="">
-        <img width="5%" src="https://assets.pharmeasy.in/apothecary/images/appStore.svg?dim=256x0" alt="">
-</div>
+
 
 
 
