--- a/login.html
+++ b/login.html
@@ -22,10 +22,10 @@
     <input type="password" placeholder="">
     <label>Confirm Password</label>
     <input type="password" placeholder="">
-    <input type="button" value="submit" name="" id="">
+    <input  type="button" value="submit" name="" id="btn">
    </form>
    <p class="para-2">Already have an account <a href="login2.html">Login Here</a></p>
    </div>
-   
 </body>
+<script src="login.js"></script>
 </html>
