--- a/login2.html
+++ b/login2.html
@@ -16,9 +16,10 @@
     <input type="email" placeholder="">
     <label>Password</label>
     <input type="password" placeholder="">
-    <input type="button" value="submit" name="" id=""
+    <input type="button" value="submit" name="" id="btn">
         </form>
     </div>
     <p class="para-2">Not have an account ? <a href="login.html">Sign up here</a></p>
 </body>
+<script src="login.js"></script>
 </html>
