--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
     <a href="https://pharmeasy.in/?isSEM=true&utm_source=google&utm_medium=cpc&utm_campaign=GSB_New_CX_FP&utm_adgroup=Core&gclid=CjwKCAiAkfucBhBBEiwAFjbkrzwwxcNFwu4Zau-H_vNl_wjxkwbYjxaCJRMUB1LdcVyVqyy5krJIUBoCN20QAvD_BwE#" style="text-decoration:none">Health Care</a>
     <a href="https://pharmeasy.in/surgicare/?utm_source=Homecardtile&utm_medium=web&utm_campaign=pe-surgicare&shortlink=qihlmq06&c=Surgicare&pid=Pe_surgicare" style="text-decoration:none">Surgeries</a>
     <a href="Healthblog.html" style="text-decoration:none">Health Blogs</a>
-    <a href="" style="text-decoration:none">PLUS</a>
-    <a href="" style="text-decoration:none">Offers</a>
-    <a href="" style="text-decoration:none">Value store</a>
+    <a href="https://pharmeasy.in/plus?src=homecard" style="text-decoration:none">PLUS</a>
+    <a href="https://pharmeasy.in/offers?src=homecard" style="text-decoration:none">Offers</a>
+    <a href="https://pharmeasy.in/health-care/9066?src=homecard" style="text-decoration:none">Value store</a>
     <hr>
-    
    </nav>
    <div id="Head1">
     <h3>What are you looking for?</h3>
