--- a/Healthblog.html
+++ b/Healthblog.html
@@ -37,9 +37,9 @@
         <a href="" style="text-decoration:none">Health Care</a>
         <a href="https://pharmeasy.in/surgicare/?utm_source=Homecardtile&utm_medium=web&utm_campaign=pe-surgicare&shortlink=qihlmq06&c=Surgicare&pid=Pe_surgicare" style="text-decoration:none">Surgeries</a>
         <a href="Healthblog.html" style="text-decoration:none">Health Blogs</a>
-        <a href="" style="text-decoration:none">PLUS</a>
-        <a href="" style="text-decoration:none">Offers</a>
-        <a href="" style="text-decoration:none">Value store</a>
+        <a href="https://pharmeasy.in/plus?src=homecard" style="text-decoration:none">PLUS</a>
+        <a href="https://pharmeasy.in/offers?src=homecard" style="text-decoration:none">Offers</a>
+        <a href="https://pharmeasy.in/health-care/9066?src=homecard" style="text-decoration:none">Value store</a>
         <hr>
         
        </nav>
